<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAlbumActivity"
    android:background="#8ECAE6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Nuevo Album"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="82dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="Título del album"
            android:textSize="16sp"
            android:textStyle="bold"
            android:labelFor="@+id/inputTitleAlbum"/>

        <EditText
            android:id="@+id/inputTitleAlbum"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Año de lanzamiento"
            android:textSize="16sp"
            android:textStyle="bold"
            android:labelFor="@+id/inputYear"/>

        <EditText
            android:id="@+id/inputYear"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:inputType="date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="URL de la portada"
            android:textSize="16sp"
            android:textStyle="bold"
            android:labelFor="@+id/inputCoverURL"/>

        <EditText
            android:id="@+id/inputCoverURL"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Descripción"
            android:textSize="16sp"
            android:textStyle="bold"
            android:labelFor="@+id/inputAlbumDescription"/>

        <EditText
            android:id="@+id/inputAlbumDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:inputType="textMultiLine"
            android:lines="4"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Género"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteGenre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="Selecciona un género" />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Sello discográfico"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteRecordLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="Selecciona un sello discográfico" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="35dp">

            <Button
                android:id="@+id/btCancelAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="Cancelar"></Button>

            <Button
                android:id="@+id/btAddAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="Agregar"></Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>