<resources>
    <string name="app_name">Vinilos DJAM</string>
    <string name="artist_image">Artist image</string>
    <string name="homme_image">Home Image</string>
    <string name="invited_user_button">Usuario invitado</string>
    <string name="colecter_button">Coleccionista</string>
    <string name="register_button">¿Registrarte como coleccionista?</string>
    <string name="album_cover_image">Album cover</string>
    <string name="cover_detail_image">Album detail image</string>
    <string name="input_prize_description_label">Descripción del premio</string>
    <string-array name="genres">
        <item>Salsa</item>
        <item>Rock</item>
        <item>Classical</item>
        <item>Folk</item>
    </string-array>
    <string-array name="record_label">
        <item>Sony</item>
        <item>Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Record</item>
    </string-array>
</resources>